# Project_RAGA

./: .env  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  vector_db.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx  UploadArea.jsx
frontend/src/lib/: api.js
frontend/src/pages/: ChatInterface.jsx
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/21601c52-6260-4ac9-b261-5b6660687ff2/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/38145dff-24c7-42c2-8e6f-f86b052905c1/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/9b89843e-a861-4203-b636-17e0a08ea915/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/d88cbf53-26e9-4b03-9c99-d9eeb6a31421/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/f565d9bc-ce95-4331-9fdd-f0aa4f526e6d/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/fc1c47ed-7c59-40cc-bb5d-5fa04506479b/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
